--- a/resources/fxml/AlgoCard.fxml
+++ b/resources/fxml/AlgoCard.fxml
@@ -6,14 +6,15 @@
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="BOTTOM_CENTER" spacing="5" prefHeight="180.0" prefWidth="160.0"
-      style="-fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 10, 0, 0, 2);"
+      onMouseClicked="#handleCardClick"
+      style="-fx-background-radius: 10; -fx-effect: drop shadow(Gaussian, RGBA(0,0,0,0.3), 10, 0, 0, 2);"
       xmlns="http://javafx.com/javafx/25"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.AlgoVista.dashboard.CardController">
     <children>
         <Label fx:id="algoName" text="Algorithm" textAlignment="CENTER" textFill="WHITE"
                maxWidth="Infinity"
-               style="-fx-background-color: rgba(0, 0, 0, 0.75);
+               style="-fx-background-color: RGBA(0, 0, 0, 0.75);
                       -fx-padding: 10;
                       -fx-background-radius: 0 0 10 10;">
             <font>
